# homelab-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build-media-mcp.yml  build-model-mcp.yml
crates/homelab-mcp-core/: Cargo.toml  README.md
crates/homelab-mcp-core/src/: lib.rs
crates/homelab-mcp-k8s/: Cargo.toml  README.md
crates/homelab-mcp-k8s/src/: capacity.rs  download.rs  lib.rs  live.rs  reconciler.rs  runtime_store.rs  status.rs
crates/model-catalog/: Cargo.toml  README.md
crates/model-catalog/examples/: print_crds.rs
crates/model-catalog/src/: arena.rs  capacity.rs  crds.rs  digest.rs  lib.rs  planner.rs  policy.rs  profile.rs  recipe.rs  render.rs  state.rs  types.rs
crates/model-catalog/src/snapshots/: model_catalog__render__tests__snapshot_deepseek_v4_flash_inferenceservice.snap  model_catalog__render__tests__snapshot_deepseek_v4_flash_inferenceservice.snap.new  model_catalog__render__tests__snapshot_qwen3_8b_inferenceservice.snap  model_catalog__render__tests__snapshot_qwen3_8b_inferenceservice.snap.new
crates/model-catalog/tests/fixtures/local-recipes/: deepseek-v4-flash.yaml  lfm25-350m.yaml  qwen3-8b.yaml
docs/superpowers/plans/: 2026-06-03-model-catalog-kserve-deployer.md  2026-06-07-media-mcp.md
docs/superpowers/specs/: 2026-06-03-model-catalog-kserve-deployer-design.md  2026-06-07-media-mcp-design.md
servers/media-mcp/: Cargo.toml  Dockerfile  README.md
servers/media-mcp/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  observability.rs  tools.rs
servers/media-mcp/src/clients/: jellyfin.rs  jellyseerr.rs  mod.rs  sabnzbd.rs
servers/media-mcp/tests/: common.rs  jellyfin_client.rs  jellyseerr_client.rs  sabnzbd_client.rs  tools.rs
servers/model-catalog-mcp/: Cargo.toml  README.md
servers/model-catalog-mcp/src/: main.rs  tools.rs
