[workspace]
resolver = "3"
members = [
  "crates/homelab-mcp-core",
  "crates/homelab-mcp-k8s",
  "crates/model-catalog",
  "servers/model-catalog-mcp",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1.0.100"
insta = { version = "1.43.2", features = ["yaml", "redactions"] }
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }
kube = { version = "3.1.0", features = ["client", "config", "derive", "runtime"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server", "server-side-http", "tower"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
axum = "0.8"
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
opentelemetry = "0.29"
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "grpc-tonic"] }
tracing-opentelemetry = "0.30"
