[package]
name = "homelab-mcp-k8s"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
homelab-mcp-core = { path = "../homelab-mcp-core" }
k8s-openapi.workspace = true
kube.workspace = true
model-catalog = { path = "../model-catalog" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
