[package]
name = "homelab-mcp-k8s"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
homelab-mcp-core = { path = "../homelab-mcp-core" }
k8s-openapi.workspace = true
kube.workspace = true
model-catalog = { path = "../model-catalog" }
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
