[package]
name = "model-catalog"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
homelab-mcp-core = { path = "../homelab-mcp-core" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
