[package]
name = "model-catalog-mcp"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
homelab-mcp-core = { path = "../../crates/homelab-mcp-core" }
homelab-mcp-k8s = { path = "../../crates/homelab-mcp-k8s" }
model-catalog = { path = "../../crates/model-catalog" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
